--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
 /*  your css code here. If applicable */
+wrapper{
+	background-color: white;
+}
+
+.container{
+	width: 350px;
+	padding: 20px;
+	background-color: lightgray;
+	box-shadow: 1px 1px 1px 1px;
+	border-radius: 10px
+}
+
+img{
+	width: 200px
+	margin: auto;
+}
+
+button{
+	padding: 10px;
+	background-color: lightpink;
+	color: white;
+	border-radius: 10px
+}
